--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -14,6 +14,37 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+
+    <!--Strings related to customer list fragment -->
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="customer_list_add">Ajouter un client</string>
+
+    <!--Strings related to the creation of a HE customer  -->
+    <string name="create_he_fragment_name_textview">Nom : </string>
+    <string name="create_he_fragment_is_public_yes_radio_button">Oui</string>
+    <string name="create_he_fragment_is_public_no_radio_button">Non</string>
+    <string name="create_he_fragment_siret_number_textview">Numéro de Siret : </string>
+    <string name="create_he_fragment_finess_number_textview">Numéro de Finess : </string>
+    <string name="create_he_fragment_street_number_textview">Numéro de rue : </string>
+    <string name="create_he_fragment_street_name_textview">Nom de rue : </string>
+    <string name="create_he_fragment_town_name_textview">Ville : </string>
+    <string name="create_he_fragment_zip_code_textview">Code postal : </string>
+    <string name="create_he_fragment_web_site_textview">Site web : </string>
+    <string name="create_he_fragment_bed_number_textview">Nombre de lit : </string>
+    <string name="create_he_fragment_etablishment_type_textview">Type d'etablissement : </string>
+    <string name="create_he_fragment_purshasing_central_textview">Centrale d'achat : </string>
+    <string name="create_he_fragment_holding_textview">Holding : </string>
+    <string name="create_he_fragment_difficulty_having_contact_textview">Difficulté d'avoir un contact : </string>
+    <string name="create_he_fragment_zero_radio_button">0</string>
+    <string name="create_he_fragment_one_radio_button">1</string>
+    <string name="create_he_fragment_two_radio_button">2</string>
+    <string name="create_he_fragment_three_radio_button">3</string>
+    <string name="create_he_fragment_four_radio_button">4</string>
+    <string name="create_he_fragment_five_radio_button">5</string>
+    <string name="create_he_fragment_service_building_textview">Service et locaux : </string>
+    <string name="create_he_fragment_validate">Valider</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
