--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">CRM-tab</string>
     <string name="title_activity_login">Sign in</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_preformated_message">PreformatedMessageActivity</string>
 </resources>
