--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -16,4 +16,13 @@
     </string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_card_view">CardViewActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="sujet">Entrez un sujet ici</string>
+    <string name="contact">Contact :</string>
+    <string name="textViewNumero">Numéro</string>
+    <string name="textviewcommentaire">Commentaire</string>
+    <string name="textaddcalllog">Ajout d\'un compte-rendu d\'appel</string>
 </resources>
