--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_activity_login">Sign in</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_preformated_message">PreformatedMessageActivity</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
