--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">CRM-tab</string>
     <string name="title_activity_login">Sign in</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_preformated_message">PreformatedMessageActivity</string>
+    <string name="title_activity_preformated_message">Messages pré-formaté</string>
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_crv_preformated_message">CrvPreformatedMessage</string>
+    <string name="title_activity_crv_preformated_message">Messages pré-formaté</string>
 </resources>
