added animation to logging page

--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -110,7 +110,7 @@
     <string name="title_activity_abstract">AbstractActivity</string>
 
 
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">CRM-TAB</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
