--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -114,4 +114,7 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="title_activity_contact_detail">ContactDetailActivity</string>
+    <string name="activity_contact_detail_sms_content_description">Send sms</string>
+    <string name="activity_contact_detail_phone_content_description">Phone call</string>
 </resources>
