US77 - TA371 : fixed phone number not displayed correctly on phone event. Call controller is now responsible of launching call activity

--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -117,4 +117,5 @@
     <string name="title_activity_contact_detail">ContactDetailActivity</string>
     <string name="activity_contact_detail_sms_content_description">Send sms</string>
     <string name="activity_contact_detail_phone_content_description">Phone call</string>
+    <string name="call_activity_phone_state_message">Communication en cours</string>
 </resources>
