--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">CRM-tab</string>
-    <string name="title_activity_login">Sign in</string>
+    <string name="app_name">CRM-TAB</string>
+    <string name="title_activity_login">CRM-TAB</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
