--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
 
     <!-- jdatour.uc.phone.call.receive -->
     <string name="message_failed_no_internet">pas de connection internet</string>
+    <string name="message_failed_websocket_connection_killed">la connexion avec le serveur a échoué, veuillez réessayer</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
