#Insert new resources in android-crmtab US62

--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -124,5 +124,6 @@
     <string name="call_activity_phone_state_message">Communication en cours</string>
 
     <string name="title_activity_scrolling_visit">Visites</string>
+    <string name="btn_finding_prospect">Find prospect</string>
 
 </resources>
