--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -135,5 +135,6 @@
     <string name="prospect_tv_website">Website</string>
     <string name="prospect_tv_etablishmentType">Etablishment type</string>
     <string name="prospect_tv_turnover">Turnover</string>
+    <string name="prospect_bt_insert">Insert new client</string>
 
 </resources>
