#US Display error map : updated detailhcfragment to display error

--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -109,6 +109,8 @@
     <string name="display_hc_fragment_ispublic_yes_textview">Oui</string>
     <string name="display_hc_fragment_ispublic_no_textview">Non</string>
     <string name="display_hc_fragment_map_textview">Carte de </string>
+    <string name="display_hc_fragment_map_unavailable">La carte représentant la position du client n’a pas été pré-téléchargé.
+        \nIl le sera à votre prochaine connexion au service en ligne.</string>
 
     <!-- Strings related to the display of an independant customer -->
     <string name="display_independant_fragment_title_action_bar">Détail d\'un indépendant</string>
