US85 : wi-agenda-mock TA431 : agenda added to menu, basic IHM is complete

--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -126,5 +126,6 @@
 
     <string name="title_activity_scrolling_visit">Visites</string>
     <string name="btn_finding_prospect">Find prospect</string>
+    <string name="title_activity_agenda">AgendaActivity</string>
 
 </resources>
