US85 / TA432 : Agenda ready to be used

--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -142,6 +142,7 @@
     <string name="prospect_bt_insert">Insert new client</string>
     <string name="prospect_bt_back">Back</string>
     <string name="prospect_tv_bed">Bed Number</string>
+    <string name="title_activity_main2">Main2Activity</string>
     >>>>>>> dev
 
 </resources>
