--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -153,6 +153,7 @@
     <string name="create_phoning_campaign_fragment_list_customer_added">Liste des clients ajouté : </string>
     <string name="create_phoning_campaign_fragment_button_contact_list">Ajouter des contacts</string>
     <string name="add_contact_phoning_campaign_fragment_title_fragment">Ajouter des contacts a la campagne</string>
+    <string name="add_contact_phoning_campaign_fragment_button_detail">Créer la campagne de phoning</string>
 
 
 </resources>
