#US Create phoning campaign : Added error message

--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -152,6 +152,8 @@
     <string name="create_phoning_campaign_fragment_list_customer">Liste des clients à ajouter : </string>
     <string name="create_phoning_campaign_fragment_list_customer_added">Liste des clients ajouté : </string>
     <string name="create_phoning_campaign_fragment_button_contact_list">Ajouter des contacts</string>
+    <string name="create_phoning_campaign_fragment_error_title_empty">Le titre ne peut être vide</string>
+    <string name="create_phoning_campaign_fragment_error_objective_empty">L'objectif ne peut être vide</string>
     <string name="add_contact_phoning_campaign_fragment_title_fragment">Ajouter des contacts a la campagne</string>
     <string name="add_contact_phoning_campaign_fragment_button_detail">Creer la campagne de phoning</string>
     <string name="detail_phoning_campaign_fragment_title_fragment">Detail de la campagne de phoning</string>
