--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -159,6 +159,11 @@
     <string name="detail_phoning_campaign_fragment_title_fragment">Detail de la campagne de phoning</string>
     <string name="detail_phoning_campaign_fragment_begin_campaign">Demarrer la campagne</string>
     <string name="detail_phoning_campaign_fragment_list_customer">Liste des contacts ajoute : </string>
+    <string name="call_phoning_campaign_fragment_customer_name">Nom du client : </string>
+    <string name="call_phoning_campaign_fragment_contact_name_firstname">Nom du contact : </string>
+    <string name="call_phoning_campaign_fragment_contact_job">Position du contact : </string>
+    <string name="call_phoning_campaign_fragment_commmentary_job">Commentaire sur l\'appel : </string>
+
 
 
 </resources>
