# US Begin campaign : Added protection if the user try to call someone else when he is already in call

--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -168,6 +168,7 @@
     <string name="call_phoning_campaign_fragment_next_call">Passer au prochain appel</string>
     <string name="call_phoning_campaign_fragment_reset_call">Appeler plus tard</string>
     <string name="call_phoning_campaign_fragment_stop_call">Continuer plus tard</string>
+    <string name="call_phoning_campaign_fragment_during_call">Action impossible, vous êtes toujours en appel.</string>
     <string name="call_phoning_campaign_fragment_end_campaign">Fin de la campagne</string>
     <string name="call_phoning_campaign_fragment_end_campaign_error">La sauvegarde n\'a pu être envoyé sur le serveur.
         \nLe système réessayera à la prochaine connexion</string>
