#update-pro-events : added activites to handle notifications and added facebook permission

--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -171,6 +171,7 @@
     <string name="call_phoning_campaign_fragment_end_campaign">Fin de la campagne</string>
 
 
+    <string name="app_id">1587889908205124</string>
 
 
 </resources>
