#US Restart Phoning campaign : Added Alert dialog for create campaign fragment

--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -174,6 +174,8 @@
         \nLe système réessayera à la prochaine connexion</string>
     <string name="call_phoning_campaign_fragment_pause_campaign">Mettre en pause la campagne</string>
     <string name="stop_campaign_alert_dialog_title">Êtes vous sur de vouloir mettre en pause la campagne ?</string>
+    <string name="reload_campaign_alert_dialog_title">Voulez-vous reprendre la dernière campagne de phoning ?
+        Si non la campagne sera clôturée.</string>
 
 
 
