--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -176,6 +176,7 @@
     <string name="stop_campaign_alert_dialog_title">Êtes vous sur de vouloir mettre en pause la campagne ?</string>
     <string name="reload_campaign_alert_dialog_title">Voulez-vous reprendre la dernière campagne de phoning ?
         Si non la campagne sera clôturée.</string>
+    <string name="call_phoning_campaign_fragment_stopped_campaign">Campagne arrétée</string>
 
 
 
