--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -145,6 +145,8 @@
     <string name="syncho_main">Synchronisation</string>
     <string name="auth_type">fr.pds.isintheair.crm.controller.ctruong.uc.propsect.suggestion.provider.auth</string>
     <string name="content_authority">fr.pds.isintheair.crm.controller.ctruong.uc.propsect.suggestion.provider.MyContentProvider</string>
+    <string name="sync_start">Start Syncing</string>
+    <string name="sync_schedule">Schedule Sync every 10 Sec</string>
 
     <!-- Strings related to the creation of a phoning campaign -->
     <string name="create_phoning_campaign_fragment_title_fragment">Creer une campagne de phoning</string>
