--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -177,6 +177,8 @@
     <string name="reload_campaign_alert_dialog_title">Voulez-vous reprendre la dernière campagne de phoning ?
         Si non la campagne sera clôturée.</string>
     <string name="call_phoning_campaign_fragment_stopped_campaign">Campagne arrétée</string>
+    <string name="create_phoning_campaign_fragment_rest_server_error">Le serveur ne peut être appelé, la campagne est \n
+     est impossible sans serveur</string>
 
 
 
