--- a/android-crmtab/app/src/main/res/values/strings.xml
+++ b/android-crmtab/app/src/main/res/values/strings.xml
@@ -194,7 +194,7 @@
     <string name="sync_contact">Contact</string>
 
 
-    <!-- Uc Sync dynimically contacts -->
+    <!-- Uc Sync dynamically contacts -->
     <string name="sync_account_type">contact.example.com</string>
     <string name="content_authority_contact">fr.pds.isintheair.crm</string>
 
